--- a/templates/main.html
+++ b/templates/main.html
@@ -25,17 +25,18 @@
             {% if current_user.is_authenticated %}
 
             <li class="nav-item">
-              <a class="nav-link" href=""{{current_user.username}}</a>
+              <a class="nav-link" href="">{{current_user.username}}</a>
             </li>
+           
+
+            <li class="nav-item">
+              <a class="nav-link" href="blogpost">Post Blog</a>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="Logout">Logout</a>
             </li>
             
-
-
-            <li class="nav-item">
-              <a class="nav-link" href="blog post">Post blog</a>
-            </li>
             
             {% else %}
 
