--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,7 +5,7 @@
 {% block body %}
 <h1>Blog Page</h1>
 
-
+<form method="POST" action="/blogpost">
 <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Title</label>
     <input type="text" class="form-control" id="title" name="title" placeholder="Title">
@@ -22,5 +22,6 @@
   </div>
 
   
-  <input type="'submit" value="POST" class="btn-btn primary"
+  <input type="submit" class="btn btn-primary" >
+</form>
 {% endblock body %}
